<?xml version="1.0"?>
<package format="2">
  <name>swerve_drive</name>
  <version>0.1.0</version>
  <description>The dynamixel_workbench package by Urban Robotics</description>

  <maintainer email="james.yookh@gmail.com">James Yoo</maintainer>
  
  <license>Apache 2.0</license>

  <url type="website">https://github.com/james-yoo/ROS_SWERVE</url>

  <author email="james.yookh@gmail.com">James Yoo</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamixel_workbench_msgs</build_depend>
  <build_depend>dynamixel_workbench_toolbox</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>dynamixel_workbench_msgs</build_export_depend>
  <build_export_depend>dynamixel_workbench_toolbox</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>dynamixel_workbench_msgs</exec_depend>
  <exec_depend>dynamixel_workbench_toolbox</exec_depend>

</package>
